# RPC-Portioning-Line

./: README.md
doc/: report.txt
models/blend/: chocolate_bar.blend  portioning_machine.blend  shelf.blend  table.blend  vision_box.blend  walls.blend
models/dae/chocolate_bar/: model.config  model.sdf
models/dae/chocolate_bar/meshes/: chocolate_bar.dae
models/dae/portioning_machine/: model.config  model.sdf
models/dae/portioning_machine/meshes/: portioning_machine.dae
models/dae/shelf/: model.config  model.sdf
models/dae/shelf/meshes/: shelf.dae
models/dae/table/: model.config  model.sdf
models/dae/table/meshes/: table.dae
models/dae/vision_box/: model.config  model.sdf
models/dae/vision_box/meshes/: vision_box.dae
models/dae/walls/: model.config  model.sdf
models/dae/walls/meshes/: walls.dae  walls2.dae  walls_slim.dae
src/devel/lib/pkgconfig/: gazebo_grasp_plugin.pc  gazebo_version_helpers.pc  mlp3240_description.pc  mlp3240_gazebo.pc  ur5e_mlp3240_moveit_config.pc  ur_bringup.pc  ur_driver.pc  ur_e_description.pc
src/src/ur5e_mlp3240_moveit_config/: .setup_assistant
src/src/ur5e_mlp3240_task/: package.xml
ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ws/devel/lib/pkgconfig/: ur_driver.pc  (+10 more)
ws/src/ur5e_mlp3240_moveit_config/: CMakeLists.txt
ws/src/ur5e_mlp3240_task/: CMakeLists.txt
ws/src/ur5e_mlp3240_task/include/: chocolate_portioner_env.h  ur5e_gripper_interface.h
ws/src/ur5e_mlp3240_task/src/: pick_and_place.cpp  pick_and_place_basic_collisions.cpp
ws/src/ur5e_mlp3240_task/world/: portioning_line.world  temp.xml
(+77 files in other folders)
